<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Send Transaction Feature -->
    <string name="send_transaction_title">Send money</string>
    <string name="send_transaction_previous">Previous</string>
    <string name="send_transaction_next">Next</string>
    <string name="send_transaction_transfer">Transfer</string>
    <string name="send_transaction_menu_close">Close</string>

    <!-- Insert Transaction Value -->
    <string name="insert_transaction_title">What is the transfer value?</string>
    <string name="insert_transaction_subtitle">Enter a binary value.</string>
    <string name="insert_transaction_hint">Value</string>

    <!-- Insert Recipient Name -->
    <string name="insert_recipient_name_title">Who do you want to send 010101?</string>
    <string name="insert_recipient_name_subtitle">Enter the recipient first and last name to proceed.</string>
    <string name="insert_recipient_name_hint">Complete name</string>

    <!-- Select Recipient Country -->
    <string name="select_recipient_country_title">What is the recipient country?</string>
    <string name="select_recipient_country_subtitle">Select the recipient country.</string>

    <!-- Insert Recipient Phone -->
    <string name="insert_recipient_phone_title">What is the recipient phone?</string>
    <string name="insert_recipient_phone_subtitle">Enter the recipient phone number.</string>
    <string name="insert_recipient_phone_hint">Phone number</string>
    <string name="insert_recipient_phone_prefix_hint">Prefix</string>

    <!-- Transaction Confirmation -->
    <string name="transaction_confirmation_transferring">Transferring</string>
    <string name="transaction_confirmation_currency_value">$ %s</string>
    <string name="transaction_confirmation_transfer_to">to %s</string>
    <string name="transaction_confirmation_country">Country</string>
    <string name="transaction_confirmation_phone">Phone number</string>
    <string name="transaction_confirmation_transfer_exchange">Exchange value</string>
    <string name="transaction_confirmation_transfer">Transfer</string>

    <!-- Countries -->
    <string name="country_kenya">Kenya</string>
    <string name="country_nigeria">Nigeria</string>
    <string name="country_tanzania">Tanzania</string>
    <string name="country_uganda">Uganda</string>

    <!-- Transaction Success -->
    <string name="transaction_success_title">Transfer executed successfully</string>
    <string name="transaction_success_message">The transfer in the amount of %s was sent successfully.</string>
    <string name="transaction_success_button_action">OK</string>

</resources>