<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_title"
        style="@style/TextAppearance.PenguinPay.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/insert_transaction_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_subtitle"
        style="@style/TextAppearance.PenguinPay.Subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/insert_transaction_subtitle"
        android:textColor="@color/gray_medium"
        app:layout_constraintEnd_toEndOf="@id/text_view_title"
        app:layout_constraintStart_toStartOf="@id/text_view_title"
        app:layout_constraintTop_toBottomOf="@id/text_view_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/insert_transaction_hint"
        app:layout_constraintTop_toBottomOf="@id/text_view_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_transaction_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>