<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_title"
        style="@style/TextAppearance.PenguinPay.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/transaction_confirmation_transferring"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_transfer_value"
        style="@style/TextAppearance.PenguinPay.H5.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/primary_dark"
        app:layout_constraintTop_toBottomOf="@id/text_view_title"
        tools:text="$ 010101" />

    <TextView
        android:id="@+id/text_view_transfer_to"
        style="@style/TextAppearance.PenguinPay.Subtitle.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_transfer_value"
        tools:text="to ANDRE JUNIOR" />

    <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="56dp"
        android:background="@color/gray_extra_light"
        app:layout_constraintTop_toBottomOf="@id/text_view_transfer_to" />

    <!-- Country Item Region -->
    <TextView
        android:id="@+id/text_view_country"
        style="@style/TextAppearance.PenguinPay.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/transaction_confirmation_country"
        android:textColor="@color/gray_medium"
        app:layout_constraintStart_toStartOf="@id/divider_top"
        app:layout_constraintTop_toBottomOf="@id/divider_top" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/text_view_country_value"
        app:layout_constraintEnd_toStartOf="@id/text_view_country_value"
        app:layout_constraintTop_toTopOf="@id/text_view_country_value"
        tools:srcCompat="@drawable/ic_kenya_flag" />

    <TextView
        android:id="@+id/text_view_country_value"
        style="@style/TextAppearance.PenguinPay.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/text_view_country"
        app:layout_constraintEnd_toEndOf="@id/divider_top"
        app:layout_constraintTop_toTopOf="@id/text_view_country"
        tools:text="Kenya" />
    <!-- End Region -->

    <!-- Phone Item Region -->
    <TextView
        android:id="@+id/text_view_phone"
        style="@style/TextAppearance.PenguinPay.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/transaction_confirmation_phone"
        android:textColor="@color/gray_medium"
        app:layout_constraintStart_toStartOf="@id/divider_top"
        app:layout_constraintTop_toBottomOf="@id/text_view_country" />

    <TextView
        android:id="@+id/text_view_phone_value"
        style="@style/TextAppearance.PenguinPay.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/text_view_phone"
        app:layout_constraintEnd_toEndOf="@id/divider_top"
        app:layout_constraintTop_toTopOf="@id/text_view_phone"
        tools:text="+254 98652-9874" />
    <!-- End Region -->

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_extra_light"
        app:layout_constraintTop_toBottomOf="@id/text_view_phone" />

    <TextView
        android:id="@+id/text_view_transfer_exchange"
        style="@style/TextAppearance.PenguinPay.Body.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/transaction_confirmation_transfer_exchange"
        app:layout_constraintStart_toStartOf="@id/divider_bottom"
        app:layout_constraintTop_toBottomOf="@id/divider_bottom" />

    <TextView
        android:id="@+id/text_view_transfer_exchange_value"
        style="@style/TextAppearance.PenguinPay.Body.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_dark"
        app:layout_constraintBottom_toBottomOf="@id/text_view_transfer_exchange"
        app:layout_constraintEnd_toEndOf="@id/divider_bottom"
        app:layout_constraintTop_toTopOf="@id/text_view_transfer_exchange"
        tools:text="01111100010001" />

</androidx.constraintlayout.widget.ConstraintLayout>